feature(k8s): review project stucture, add task to install coredns chart
Signed-off-by: unusualpseudo <hatimahadri@proton.me>

--- a/ansible/main/playbooks/kubernetes/templates/custom-calico-installation.yaml.j2
+++ b/ansible/main/playbooks/kubernetes/templates/custom-calico-installation.yaml.j2
@@ -17,6 +17,6 @@ spec:
         nodeSelector: all()
     nodeAddressAutodetectionV4:
       cidrs:
-        - "{{ (ansible_default_ipv4.network + '/' + ansible_default_ipv4.netmask) | ansible.utils.ipaddr('network/prefix') }}"
+        - "{{ node_cidr }}"
   nodeMetricsPort: 9091
   typhaMetricsPort: 9093
