--- a/ansible/main/playbooks/kubernetes/templates/custom-kube-vip-rbac.yaml.j2
+++ b/ansible/main/playbooks/kubernetes/templates/custom-kube-vip-rbac.yaml.j2
@@ -10,7 +10,7 @@ kind: ClusterRole
 metadata:
   annotations:
     rbac.authorization.kubernetes.io/autoupdate: "true"
-  name: system:kube-vip-role
+  name: kube-vip-role
 rules:
   - apiGroups: [""]
     resources: ["services/status"]
@@ -31,11 +31,11 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: system:kube-vip-binding
+  name: kube-vip-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:kube-vip-role
+  name: kube-vip-role
 subjects:
 - kind: ServiceAccount
   name: kube-vip
