--- a/ansible/main/roles/os/templates/resolv.conf.j2
+++ b/ansible/main/roles/os/templates/resolv.conf.j2
@@ -17,7 +17,7 @@
 {% if 'dnsserver' in group_names %}
 nameserver 127.0.0.1
 {% else %}
-nameserver {{ hostvars['horizon'].ansible_default_ipv4.address }}
+nameserver {{ hostvars.horizon.ansible_default_ipv4.address }}
 {% endif %}
 nameserver 1.1.1.1
 nameserver 1.0.0.1
