--- a/ansible/main/roles/os/templates/resolv.conf.j2
+++ b/ansible/main/roles/os/templates/resolv.conf.j2
@@ -14,6 +14,7 @@
 # See man:systemd-resolved.service(8) for details about the supported modes of
 # operation for /etc/resolv.conf.
 
+nameserver 127.0.0.1
 {% if 'dnsserver' in group_names %}
 nameserver 127.0.0.1
 {% else %}
