refactor(storage): remove hdd storage
Signed-off-by: unusualpseudo <hatimahadri@proton.me>

--- a/ansible/main/playbooks/dnsserver/templates/00-custom-dnsmasq-settings.conf.j2
+++ b/ansible/main/playbooks/dnsserver/templates/00-custom-dnsmasq-settings.conf.j2
@@ -1,4 +1,4 @@
-address=/{{lookup('env', 'CLOUDFLARE_DOMAIN')}}/{{lookup('env', 'K8S_GATEWAY_ADDR')}}
+address=/{{lookup('env', 'CLOUDFLARE_DOMAIN')}}/{{lookup('env', 'NGINX_INTERNAL_ADDR')}}
 dns-forward-max=5096
 min-cache-ttl=300
 rebind-domain-ok=
